# ai-assistent-universal-coder

./: .gitignore  .npmrc  AEOS_AGENT_ORCHESTRATION.md  AEOS_BOOTSTRAP_MANIFEST.json  AEOS_ENTERPRISE_ARCHITECTURE.md  AEOS_EVOLUTION_PACK_v0_6_MANIFEST.json  AEOS_EVOLUTION_PACK_v0_7_MANIFEST.json  AEOS_JUDGE_V6_MCP_RULES.md  AEOS_JUDGE_V7_AGENT_RULES.md  AEOS_MAJOR_EVOLUTION_PACK_v0_8_to_v1_0_MANIFEST.json  AEOS_MCP_CONNECTOR_SPEC.md  AEOS_MCP_RUNTIME_CONTRACT.md  AEOS_MEMORY_MODEL.md  AEOS_PERFORMANCE_ENGINEERING.md  AEOS_PERMISSION_MODEL.md  AEOS_PLAYBOOK_CONTRACT.md  AEOS_POLICY_ENGINE.md  AEOS_PRODUCTION_ENTERPRISE_PACK_v1_2_MANIFEST.json  AEOS_PRODUCTION_ENTERPRISE_SPEC.md  AEOS_SUBAGENT_SYSTEM.md  AEOS_TASK_DELEGATION_CONTRACT.md  AEOS_UNIQUE_ENVIRONMENT_PACK_v1_1_MANIFEST.json  AEOS_V0_6_ROADMAP.md  AEOS_V0_95_PACK_MARKETPLACE.md  AEOS_V0_9_APPROVAL_GATEWAY_ADVANCED.md  AEOS_V1_0_WORKBENCH_SPEC.md  AGENT.md  AGENTS.md  CHILD_AGENT.md  CONTINUOUS_LEARNING.md  HANDOFF.md  INSTALL_PRODUCTION_ENTERPRISE_v1_2.md  INSTALL_v0_6.md  INSTALL_v0_7.md  INSTALL_v0_8_to_v1_0.md  INSTALL_v1_1_ENTERPRISE.md  KNOWLEDGE_PROMOTION.md  MANIFEST.json  MANIFEST.md  MEMORY_SCHEMA.md  (+21 more)
aeos/additions/aidiabetic-urgent-improvement-v1/: FULL_EXECUTION_PROMPT.md  INSTALL.md  INSTALLER_TEST_REPORT.txt  SKILL_VALIDATION_REPORT.txt  VALIDATION_REPORT.json  pyproject.toml
complete-docs-mcp/: pyproject.toml
complete-docs-mcp/src/complete_docs_mcp/: __init__.py  generator.py  models.py  server.py
complete-docs-mcp/tests/: test_complete_docs.py
continuous-training-mcp/: MANIFEST.json  pyproject.toml
continuous-training-mcp/src/continuous_training_mcp/: __init__.py  config.py  models.py  research.py  server.py  sources.py
continuous-training-mcp/tests/: test_server.py
continuous-training-mcp/ts-scraper/: package-lock.json  package.json
continuous-training-mcp/ts-scraper/src/: index.ts
language-docs-mcp/: pyproject.toml
language-docs-mcp/src/language_docs_mcp/: __init__.py  profiles.py  server.py
language-docs-mcp/tests/: test_language_docs.py
medical-research-mcp/: MANIFEST.json  README.md  SOURCES.md  VALIDATION_REPORT.json  VALIDATION_REPORT.txt  pyproject.toml
medical-research-mcp/artifacts/: aidiabetic-deep-audit.json
medical-research-mcp/config/: disease-profile.yaml  inspector.json  mcp-server.json  token-budget.yaml
medical-research-mcp/docs/: ARCHITECTURE.md  DIABETES_STAFF_EXPERTISE.md  REGULATORY_AND_SCIENTIFIC_BOUNDARIES.md
medical-research-mcp/playbooks/: MEDICAL_AI_COMPLETE_PLAYBOOK.md
medical-research-mcp/schemas/: evidence.schema.json
medical-research-mcp/scripts/: mcp_smoke_test.py  validate_package.py
medical-research-mcp/skills/medical-ai-engineering/: SKILL.md
medical-research-mcp/src/medical_research_mcp/: AI_OWASP.py  AI_architecture.py  AI_architecture_best_practices.py  AI_best_practises.py  AI_trainning_pipeline.py  RAG.py  __init__.py  bm25.py  continuos_learning.py  continuos_learning_architecture.py  continuous_learning.py  continuous_learning_architecture.py  dependency_security.py  diabetes_expertise.py  expert_validator(accepts only with 10.0).py  expert_validator.py  lora_qora_dora_doubleLora.py  models.py  planning.py  python_best_practises.py  qualified_sites_for_medical_research_around_world.py  qulified_sites_for_medical_researchs_around_world.py  repository.py  research.py  server.py  subagents.py  token_budget.py
medical-research-mcp/tests/: test_architecture.py  test_audit_v2.py  test_bm25.py  test_dependency_security.py  test_diabetes_expertise.py  test_owasp.py  test_pipeline_rag_learning.py  test_research.py  test_security_redaction.py  test_subagents.py  test_subagents_tokens.py  test_validator.py
src/: pyproject.toml
src/aeos_workbench/bridge/: typescript_runtime.py
src/aeos_workbench/cli/: main.py
src/aeos_workbench/evidence/: crypto.py  ledger.py
universal-project-mcp/: pyproject.toml
universal-project-mcp/tests/: test_universal_project.py
(+1825 files in other folders)
