[project]
name = "complete-docs-mcp"
version = "0.1.0"
description = "AEOS complete documentation MCP with Mermaid diagram support"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
complete-docs-mcp = "complete_docs_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
