[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "continuous-training-mcp"
version = "1.0.0"
description = "Governed MCP for continuous AI training documentation, best practices, and knowledge discovery across the internet."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "PyYAML>=6.0.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "markdownify>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "jsonschema>=4.23",
]
ts = [
    "pyexecjs>=1.5.0",
]

[project.scripts]
continuous-training-mcp = "continuous_training_mcp.server:main"
continuous-training-audit = "continuous_training_mcp.audit:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
