[project]
name = "language-docs-mcp"
version = "0.1.0"
description = "AEOS governed language documentation MCP"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
language-docs-mcp = "language_docs_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
