[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "aeos-aidiabetic-urgent-improvement-pack"
version = "1.0.0"
description = "AEOS improvement overlay for AIDiabetic Research"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8", "jsonschema>=4", "PyYAML>=6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
